src/objects/Integration_Error__c.object
<CustomObject>
    <description>Object for logging integration errors.</description>
    <fields>
        <fullName>Direction__c</fullName>
        <label>Direction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Error_Description__c</fullName>
        <label>Error Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Integration_Object_Id__c</fullName>
        <label>Integration Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Object__c</fullName>
        <label>Integration Object</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Point__c</fullName>
        <label>Integration Point</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>IE</fullName>
                </value>
                <value>
                    <fullName>Intel TAS</fullName>
                </value>
                <value>
                    <fullName>PAR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Data__c</fullName>
        <label>Request Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Integration Error</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Integration_Point__c</columns>
        <columns>Direction__c</columns>
        <columns>Integration_Object__c</columns>
        <columns>Integration_Object_Id__c</columns>
        <columns>Error_Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Today</fullName>
        <columns>NAME</columns>
        <columns>Integration_Point__c</columns>
        <columns>Direction__c</columns>
        <columns>Integration_Object__c</columns>
        <columns>Integration_Object_Id__c</columns>
        <columns>Error_Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Yesterday</fullName>
        <columns>NAME</columns>
        <columns>Integration_Point__c</columns>
        <columns>Direction__c</columns>
        <columns>Integration_Object__c</columns>
        <columns>Integration_Object_Id__c</columns>
        <columns>Error_Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Yesterday</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>EA-{00000000}</displayFormat>
        <label>Error ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Errors</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>